Style: Changed the description of the  XD/iXD Sticker project info div

--- a/Audromida.html
+++ b/Audromida.html
@@ -76,7 +76,7 @@
                     <h2>YouthAWear</h2>
                     <p><strong>Design:</strong> Figma, Illustrator</p>
                     <p><strong>Development:</strong> HTML, CSS, JavaScript</p>
-                    <p><strong>Description:</strong> YouthAWear is a fictional sustainable clothing brand that focuses on eco-friendly fashion for young adults.</p>
+                    <p><strong>Description:</strong> YouthAWear was such a fun project to work on! For our final project of the first schoolyear, we were tasked with creating a digital product to raise awareness about substainible fashion. I chose to desgin an online learning platform aimed at childeren aged 12 to 18. Trough a series of interactive quiz-style games, users can learn about substainiblity in fashion in a fun and engaging way. They can also create and costumize their own avatars using a variety of substainible clothing options, which they can "buy" and try on within the platform.</p>
 
                     <div class="carousel">
                         <div class="carousel-images">
@@ -92,7 +92,7 @@
                     <h2>XD/iXD Stickers</h2>
                     <p><strong>Design:</strong> Figma, Illustrator</p>
                     <p><strong>Development:</strong> none</p>
-                    <p><strong>Description:</strong> XD/iXD Stickers is a fictional project that focuses on creating customizable stickers for digital communication.</p>
+                    <p><strong>Description:</strong> For the openingsweek of the new schoolyear at Thomas More, we were asked create something to put Digital Experience Design on the map! I came up with the fun idea of creating stickers resembling the course. Combining elements of both design and development, I designed stickers that reflect the essence of the curriculum.</p>
                     <div class="carousel">
                         <div class="carousel-images">
                             <img src="img/sticker XD.png" alt="XDsticker" class="carousel-item">
