Add: Added the Foodkiosk project in schoolprojects

--- a/Audromida.html
+++ b/Audromida.html
@@ -101,18 +101,22 @@
                     </div>
                 </div>
 
-                <a href="#" class="project-title">Filler</a>
+                <a href="#" class="project-title">3D Foodkiosk</a>
                 <div class="project-info hidden">
-                    <h2>Filler</h2>
-                    <p><strong>Design:</strong> Figma, Illustrator</p>
-                    <p><strong>Development:</strong> HTML, CSS, JavaScript</p>
-                    <p><strong>Description:</strong> Filler is a fictional project that serves as a placeholder for future content.</p>
+                    <h2>3D Foodkiosk</h2>
+                    <p><strong>Design:</strong> Blender</p>
+                    <p><strong>Development:</strong> None</p>
+                    <p><strong>Description:</strong> Our final project in 3D Design focused on creating a food kiosk modeled after a street food of our choice. I designed mine around the Nigerian kitchen since I grew up with it. Set in a quiet park, the kiosk captures the simplicity and charm of eating a well-flavored meal on a warm summer evening with family and friends.</p>
 
                     <div class="carousel">
                         <div class="carousel-images">
-                            <img src="img/youthawearStudentDash.png" alt="studentdashboard" class="carousel-item">
-                            <img src="img/youthawearTeacherDash.png" alt="teacherdashboard" class="carousel-item">
-                            <img src="img/youthawearAvatarShop.png" alt="avatarshop" class="carousel-item">
+                            <img src="img/Foodkioskfront.png" alt="Foodkioskfront" class="carousel-item">
+                            <img src="img/Foodkioskside.png" alt="Foodkioskside" class="carousel-item">
+                            <img src="img/Foodkioskback.png" alt="Foodkioskback" class="carousel-item">
+                            <video width="320" height="240" controls>
+                                <source src="img/Foodkiosk.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
                     </div>
                 </div>
