Add: Added YouthAWear video showing the Laundry Logic game from the website to project section

--- a/Audromida.html
+++ b/Audromida.html
@@ -83,6 +83,10 @@
                             <img src="img/youthawearStudentDash.png" alt="studentdashboard" class="carousel-item">
                             <img src="img/youthawearTeacherDash.png" alt="teacherdashboard" class="carousel-item">
                             <img src="img/youthawearAvatarShop.png" alt="avatarshop" class="carousel-item">
+                            <video width="320" height="240" controls>
+                                <source src="img/youthawearLaundryLogic.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
                     </div>
                 </div>
