Style: changed some subtitles for the service section and added a margin-bottom to the project section

--- a/Audromida.html
+++ b/Audromida.html
@@ -52,13 +52,13 @@
         <section class="services" id="services">
             <h2>Services</h2>
             <div class="service"><h3>UI/UX Design:</h3>
-                <p>I create user-centered designs that are both functional and aesthetically pleasing.</p>
+                <p>I create user-friendly designs that are both easy to use and visually appealing.</p>
             </div>
-            <div class="service"><h3>Web Development:</h3>
-                <p>I build responsive, fast-loading websites using HTML, CSS, and JavaScript.</p>
+            <div class="service"><h3>Web/ App Development:</h3>
+                <p>I build responsive, fast-loading websites and apps using HTML, CSS, and JavaScript.</p>
             </div>
-            <div class="service"><h3>Graphic Design:</h3>
-                <p>I design logos, branding materials, and marketing collateral to help businesses stand out.</p>
+            <div class="service"><h3>3D Design:</h3>
+                <p>I create 3D models and animations using Blender to bring ideas to life.</p>
             </div>
         </section>
 
