Add: Added more icon images in the Icon folder and used them in the service section in the html

--- a/Audromida.html
+++ b/Audromida.html
@@ -51,13 +51,19 @@
 
         <section class="services" id="services">
             <h2>Services</h2>
-            <div class="service"><h3>UI/UX Design:</h3>
+            <div class="service">
+                <img src="icons/ux-ui.png" alt="ux/ui icon">
+                <h3>UI/UX Design:</h3>
                 <p>I create user-friendly designs that are both easy to use and visually appealing.</p>
             </div>
-            <div class="service"><h3>Web/ App Development:</h3>
+            <div class="service">
+               <img src="icons/webappdevelopment.png" alt="web/app icon">
+                <h3>Web/ App Development:</h3>
                 <p>I build responsive, fast-loading websites and apps using HTML, CSS, and JavaScript.</p>
             </div>
-            <div class="service"><h3>3D Design:</h3>
+            <div class="service">
+                <img src="icons/3Ddesign.png" alt="3D design icon">
+                <h3>3D Design:</h3>
                 <p>I create 3D models and animations using Blender to bring ideas to life.</p>
             </div>
         </section>
