Style: Changed the "logoimg" to the name of the website in the navbar

--- a/Audromida.html
+++ b/Audromida.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navBar">
-        <a href="Audromida.html">logoimg</a>
+        <a href="Audromida.html">Audromida</a>
         <a href="#aboutme">About me</a>
         <a href="#services">Services</a>
         <a href="#projects">Projects</a>
@@ -45,7 +45,7 @@
             <div class="skills">
                 <h3>Skills:</h3>
             </div>
-            <p>Hey there! I'm Audrey, a 28 year old Digital Experience Design student based in Belgium with a big passion for all things creative. Growing up, I spent most of my time drawing, painting, and crafting - heavily inspired by the cartoons I loved. People always told me to "do something with my art", but I wasn't sure what that meant. After highschool, I put creativity aside and worked in retail... Until Covid-19 hit. During lockdown, I reconnected with my creative side - and stumbled upon a YouTube tutorial about coding. That was the moment it all clicked! I'd found a way to combine creativity with technoligy. Today, I specialize in front-end development using HTML, CSS and JavaScript to build responsive, user-friendly websites. I design using Figma, Illustrator and Blender, and I've explored some backend basics to better understand full workflows and work more effectively in teams. I love experimenting with new tools and always try to bring a fresh skill into every project - wether it's for school or personal growth. I'm currently open to intership opportunities where I can grow, collaborate, and contribute to real-world digital experiences.
+            <p>Hey there! I'm Audrey, a 28 year old Digital Experience Design student based in Belgium with a big passion for all things creative. Growing up, I spent most of my time drawing, painting, and crafting - heavily inspired by the cartoons I loved. People always told me to "do something with my art", but I wasn't sure what that meant. After highschool, I put creativity aside and worked in retail... Until Covid-19 hit. <br> <br>During lockdown, I reconnected with my creative side - and stumbled upon a YouTube tutorial about coding. That was the moment it all clicked! I'd found a way to combine creativity with technoligy. Today, I specialize in front-end development using HTML, CSS and JavaScript to build responsive, user-friendly websites. I design using Figma, Illustrator and Blender, and I've explored some backend basics to better understand full workflows and work more effectively in teams. <br><br>I love experimenting with new tools and always try to bring a fresh skill into every project - wether it's for school or personal growth. I'm currently open to intership opportunities where I can grow, collaborate, and contribute to real-world digital experiences.
             </p>
         </section>
 
@@ -82,7 +82,7 @@
                     <h2>YouthAWear</h2>
                     <p><strong>Design:</strong> Figma, Illustrator</p>
                     <p><strong>Development:</strong> HTML, CSS, JavaScript</p>
-                    <p><strong>Description:</strong> YouthAWear was such a fun project to work on! For our final project of the first schoolyear, we were tasked with creating a digital product to raise awareness about substainible fashion. I chose to desgin an online learning platform aimed at childeren aged 12 to 18. Trough a series of interactive quiz-style games, users can learn about substainiblity in fashion in a fun and engaging way. They can also create and costumize their own avatars using a variety of substainible clothing options, which they can "buy" and try on within the platform.</p>
+                    <p><strong>Description:</strong> YouthAWear was such a fun project! For our final project of the first schoolyear, we were tasked to create a digital product to raise awareness about sustainable fashion. I chose to design an online learning platform aimed at children aged 12 to 18. Through a series of interactive quiz-style games, users can learn about sustainability in fashion in a fun and engaging way. They can also create and customize their own avatars using a variety of sustainable clothing options, which they can "buy" and try on within the platform.</p>
 
                     <div class="carousel">
                         <div class="carousel-images">
