Add: Added "Zuiderbad" project to school projects and played around with the placement of the project titles

--- a/index.html
+++ b/index.html
@@ -106,20 +106,6 @@
                     </div>
                 </div>
 
-                <a href="#" class="project-title">XD/iXD Stickers</a>
-                <div class="project-info hidden">
-                    <h2>XD/iXD Stickers</h2>
-                    <p><strong>Design:</strong> Figma, Illustrator</p>
-                    <p><strong>Development:</strong> none</p>
-                    <p><strong>Description:</strong> For the openingsweek of the new schoolyear at Thomas More, we were asked create something to put Digital Experience Design on the map! I came up with the fun idea of creating stickers resembling the course. Combining elements of both design and development, I designed stickers that reflect the essence of the curriculum.</p>
-                    <div class="carousel">
-                        <div class="carousel-images">
-                            <img src="img/sticker XD.png" alt="XDsticker" class="carousel-item">
-                            <img src="img/sticker iXD.png" alt="iXDsticker" class="carousel-item">
-                        </div>
-                    </div>
-                </div>
-
                 <a href="#" class="project-title">3D Foodkiosk</a>
                 <div class="project-info hidden">
                     <h2>3D Foodkiosk</h2>
@@ -134,6 +120,40 @@
                             <img src="img/Foodkioskback.png" alt="Foodkioskback" class="carousel-item">
                             <video width="320" height="240" controls>
                                 <source src="img/Foodkiosk.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                        </div>
+                    </div>
+                </div>
+
+                <a href="#" class="project-title">XD/iXD Stickers</a>
+                <div class="project-info hidden">
+                    <h2>XD/iXD Stickers</h2>
+                    <p><strong>Design:</strong> Figma, Illustrator</p>
+                    <p><strong>Development:</strong> none</p>
+                    <p><strong>Description:</strong> For the openingsweek of the new schoolyear at Thomas More, we were asked create something to put Digital Experience Design on the map! I came up with the fun idea of creating stickers resembling the course. Combining elements of both design and development, I designed stickers that reflect the essence of the curriculum.</p>
+                    <div class="carousel">
+                        <div class="carousel-images">
+                            <img src="img/sticker XD.png" alt="XDsticker" class="carousel-item">
+                            <img src="img/sticker iXD.png" alt="iXDsticker" class="carousel-item">
+                        </div>
+                    </div>
+                </div>
+
+                <a href="#" class="project-title">Zuiderbad</a>
+                <div class="project-info hidden">
+                    <h2>Zuiderbad</h2>
+                    <p><strong>Design:</strong> Figma, Blender, Illustrator</p>
+                    <p><strong>Development:</strong> HTML, CSS, JavaScript</p>
+                    <p><strong>Description:</strong> Last schoolyear we've been given the opportunity to work with a real client! Our class got devided in 3 groups and each group was given a different client. The group that I was part of worked with <a href="https://www.zuiderbad.be/">Zuiderbad</a>, a horeca and event bureau in Mechelen. They asked us to design an online map so people would better navigate themselves around the domain. And let me tell you, I loved working on this project!</p>
+
+                    <div class="carousel">
+                        <div class="carousel-images">
+                            <img src="#" alt="zuiderbadhome" class="carousel-item">
+                            <img src="#" alt="zuiderbadfacilities" class="carousel-item">
+                            <img src="#" alt="zuiderbadcontact" class="carousel-item">
+                            <video width="320" height="240" controls>
+                                <source src="#" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                         </div>
