Add: added a contact section, linked the nav bar to it and added a footer. Styled those 2 in css aswell

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="#aboutme">About me</a>
         <a href="#services">Services</a>
         <a href="#projects">Projects</a>
-        <a href="#">Contact</a>
+        <a href="#contact">Contact</a>
     </nav>
 
     <header class="hero">
@@ -190,7 +190,27 @@
             </div>
         </section>
 
+            <section class="contact" id="contact">
+                <h2>Contact</h2>
+                <div class="contact-info">
+                    <img src="icons/ux-ui.png" alt="ux/ui icon">
+                    <h3>email address</h3>
+                </div>
+                <div class="contact-info">
+                <img src="icons/webappdevelopment.png" alt="web/app icon">
+                    <h3>phone number</h3>
+                </div>
+                <div class="contact-info">
+                    <img src="icons/3Ddesign.png" alt="3D design icon">
+                    <h3>LinkedIn profile link</h3>
+                </div>
+                <p class="contact-description">If you're interested in working together or have any questions, feel free to reach out!</p>
+            </section>
     </main>
+
+    <footer>
+        <p>&copy; 2025 Audromida Designs. All rights reserved.</p>
+    </footer>
 
     <script src="home.js"></script>
 </body>
