Add: added my dev and design skill with a progress bar that I styled in the css file

--- a/index.html
+++ b/index.html
@@ -33,29 +33,64 @@
     <main>
         <section class="aboutMe" id="aboutme">
             <h2>About Me</h2>
-            <div class="school">
-                <div class="school-label-list">
+            <div class="bio">
+                <p>Hey there! I'm Audrey, a 28 year old Digital Experience Design student based in Belgium with a big passion for all things creative. Growing up, I spent most of my time drawing, painting, and crafting - heavily inspired by the cartoons I loved. People always told me to "do something with my art", but I wasn't sure what that meant. After highschool, I put creativity aside and worked in retail... Until Covid-19 hit. <br> <br>During lockdown, I reconnected with my creative side - and stumbled upon a YouTube tutorial about coding. That was the moment it all clicked! I'd found a way to combine creativity with technoligy. Today, I specialize in front-end development using HTML, CSS and JavaScript to build responsive, user-friendly websites. I design using Figma, Illustrator and Blender, and I've explored some backend basics to better understand full workflows and work more effectively in teams. <br><br>I love experimenting with new tools and always try to bring a fresh skill into every project - wether it's for school or personal growth. I'm currently open to intership opportunities where I can grow, collaborate, and contribute to real-world digital experiences.
+                </p>
+            </div>
+            <div class="about-content">
+                <div class="school">
+                    <div class="school-label-list">
                     <h3>School:</h3>
                     <ul>
                         <li>Visual Merchandising (2016)</li>
-                        <li>Digital Design (2024)</li>
-                        <li>Digital Experience Design (2026)</li>
+                        <li>Webdesign (2024)</li>
+                        <li>Digital Experienxe Design (2026)</li>
                     </ul>
                 </div>
-            </div>
 
-            <div class="skills">
+                <div class="skills">
                 <div class="skills-label-icons">
                     <h3>Skills:</h3>
                     <div class="icons">
-                        <img src="icons/HTML logo.png" alt="HTML logo" class="skill-icon">
-                        <img src="icons/CSS logo.png" alt="CSS logo" class="skill-icon">
-                        <img src="icons/JavaScript logo.png" alt="JavaScript logo" class="skill-icon">
+                            <p>HTML</p>
+                            <div class="progress-bar">
+                                <div class="skill html">80%</div>
+                            </div>
+
+                              <p>CSS</p>
+                            <div class="progress-bar">
+                                <div class="skill css">80%</div>
+                            </div>
+
+                              <p>JAVASCRIPT</p>
+                            <div class="progress-bar">
+                                <div class="skill js">80%</div>
+                            </div>
+
+                              <p>Figma</p>
+                            <div class="progress-bar">
+                                <div class="skill figma">80%</div>
+                            </div>
+
+                              <p>Blender</p>
+                            <div class="progress-bar">
+                                <div class="skill blender">80%</div>
+                            </div>
+
+                              <p>Illustrator</p>
+                            <div class="progress-bar">
+                                <div class="skill ill">80%</div>
+                            </div>
+
+                              <p>Photoshop</p>
+                            <div class="progress-bar">
+                                <div class="skill pho">80%</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <p>Hey there! I'm Audrey, a 28 year old Digital Experience Design student based in Belgium with a big passion for all things creative. Growing up, I spent most of my time drawing, painting, and crafting - heavily inspired by the cartoons I loved. People always told me to "do something with my art", but I wasn't sure what that meant. After highschool, I put creativity aside and worked in retail... Until Covid-19 hit. <br> <br>During lockdown, I reconnected with my creative side - and stumbled upon a YouTube tutorial about coding. That was the moment it all clicked! I'd found a way to combine creativity with technoligy. Today, I specialize in front-end development using HTML, CSS and JavaScript to build responsive, user-friendly websites. I design using Figma, Illustrator and Blender, and I've explored some backend basics to better understand full workflows and work more effectively in teams. <br><br>I love experimenting with new tools and always try to bring a fresh skill into every project - wether it's for school or personal growth. I'm currently open to intership opportunities where I can grow, collaborate, and contribute to real-world digital experiences.
-            </p>
+        </div>
         </section>
 
         <section class="services" id="services">
