Style: changed some phrasing in the project section

--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
             </div>
             <div class="service">
                <img src="icons/webappdevelopment.png" alt="web/app icon">
-                <h3>Web/ App Development:</h3>
+                <h3>Frontend Development:</h3>
                 <p>I build responsive, fast-loading websites and apps using HTML, CSS, and JavaScript.</p>
             </div>
             <div class="service">
                 <img src="icons/3Ddesign.png" alt="3D design icon">
                 <h3>3D Design:</h3>
-                <p>I create 3D models and animations using Blender to bring ideas to life.</p>
+                <p>I create 3D models and animations using Blender and bring ideas to life.</p>
             </div>
         </section>
 
