feat: added metatags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audromida Designs</title>
     <link rel="stylesheet" href="css/home.css">
+
+    <!-- Primary Meta Tags -->
+    <title>Meta Tags — Preview, Edit and Generate</title>
+    <meta name="title" content="Audromida Designs" />
+    <meta name="description" content="My name is Audrey, a 3rd years Digital Experience Design student with a huge passion for design." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://http://audromida.tech/"/>
+    <meta property="og:title" content="Audromida Designs"/>
+    <meta property="og:description" content="My name is Audrey, a 3rd years Digital Experience Design student with a huge passion for design." />
+    <!--<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />-->
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://http://audromida.tech/"/>
+    <meta property="twitter:title" content="Audromida Designs"/>
+    <meta property="twitter:description" content="My name is Audrey, a 3rd years Digital Experience Design student with a huge passion for design." />
+    <!--<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />-->
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body>
     <nav class="navBar">
