--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
     <!--<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />-->
 
     <!-- Meta Tags Generated with https://metatags.io -->
+
+    <!-- Hotjar Tracking Code for https://audromida.tech/ -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:6534995,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
 </head>
 <body>
     <nav class="navBar">
