Style: Changed the contact section to match the new icons and information

--- a/index.html
+++ b/index.html
@@ -289,16 +289,18 @@
             <section class="contact" id="contact">
                 <h2>Contact</h2>
                 <div class="contact-info">
-                    <img src="icons/ux-ui.png" alt="ux/ui icon">
-                    <h3>email address</h3>
+                    <img src="icons/mailandphonenr.png" alt="email and phone number icon">
+                    <h3>Email: fake@email.com<br>
+                        Phone nr: 04 000 000</h3>
+                </div>
                 </div>
                 <div class="contact-info">
-                <img src="icons/webappdevelopment.png" alt="web/app icon">
-                    <h3>phone number</h3>
+                    <img src="icons/linkedin.png" alt="linkedIn icon">
+                    <h3>LinkedIn: <a href="https://be.linkedin.com/in/audrey-kudjo-6a6281386">Audrey Kudjo</a></h3>
                 </div>
-                <div class="contact-info">
-                    <img src="icons/3Ddesign.png" alt="3D design icon">
-                    <h3>LinkedIn profile link</h3>
+                 <div class="contact-info">
+                    <img src="icons/cv.png" alt="curriculum vitae icon">
+                    <h3><a href="#">Download my CV</a></h3>
                 </div>
                 <p class="contact-description">If you're interested in working together or have any questions, feel free to reach out!</p>
             </section>
